--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Set environment variable
         run: echo "ENV=prod" >> $GITHUB_ENV
       - name: Run Playwright tests
-        run: npx playwright test --with-deps
+        run: npx run test
       - name: Generate HTML report with metadata
         run: npm run report
       - name: Zip the report folder
